--- a/features.html
+++ b/features.html
@@ -147,10 +147,8 @@
                                     <div class="auto-container">
                                         <div class="sec-title text-center"> 
                                             <h1>Advantages of CRM</h1>
-                                            <div class="text">Minim veniam quis nostrud exercitation ullamco laboris
-                                                nisi ut aliquip ex ea consequat irure dolor in
-                                                <br>reprehenderit in voluptate velit esse cillum dolore fugiat nulla
-                                                pariatur excepteur</div>
+                                            <div class="text">Innumerable features that are very sensitive to the needs of Company. <br>Seemingly negligible yet sensitive factors
+                                            become an organizational and planning challenge.</div>
                                         </div>
                                         <div class="feature-outer">
                                             <div class="row">
@@ -159,11 +157,10 @@
                                                         <div class="icon-box"><span
                                                                 class="icon icon fa fa-chart-bar"></span>
                                                         </div>
-                                                        <h4><a href="demo.html">Marketing
-                                                                Analytics</a></h4>
-                                                        <div class="text">Ipsum dolor sit amet con tetur adipisicing
-                                                            elit, sed do eiusm tempor incididunt ut lab oret dolore magn
-                                                            aliqua.</div>
+                                                        <h4><a href="demo.html">Customer Database</a></h4>
+                                                        <div class="text">In the CRM database software, customer data within different functional areas within companies and on different media is
+                                                        often recorded. It has completed and accurate customer information, no redundancy and takes less time to access
+                                                        information.</div>
                                                         <div class="link-btn"><a
                                                                 href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
@@ -174,11 +171,9 @@
                                                     <div class="inner-box">
                                                         <div class="icon-box"><span class="icon icon fa fa-plus-square"></span>
                                                         </div>
-                                                        <h4><a href="demo.html">Creative
-                                                                Paths</a></h4>
-                                                        <div class="text">Ipsum dolor sit amet con tetur adipisicing
-                                                            elit, sed do eiusm tempor incididunt ut lab oret dolore magn
-                                                            aliqua.</div>
+                                                        <h4><a href="demo.html">Process Management</a></h4>
+                                                        <div class="text">The alignment of business processes and information technology is essential for a successful CRM system. It is efficient in managing the customers at different stages and assigns tasks in the organization avoiding redundant
+                                                        processes.</div>
                                                         <div class="link-btn"><a
                                                                 href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
@@ -190,11 +185,9 @@
                                                         <div class="icon-box"><span
                                                                 class="icon icon fa fa-chart-pie"></span>
                                                         </div>
-                                                        <h4><a href="demo.html">Data
-                                                                Blending</a></h4>
-                                                        <div class="text">Ipsum dolor sit amet con tetur adipisicing
-                                                            elit, sed do eiusm tempor incididunt ut lab oret dolore magn
-                                                            aliqua.</div>
+                                                        <h4><a href="demo.html">Staff Empowerment</a></h4>
+                                                        <div class="text">With the huge customer database, CRM system had increased the conversion rate of prospects for the employees. It
+                                                        increases the satisfaction level of the staff with a reduction in administration at many levels of the organization.</div>
                                                         <div class="link-btn"><a
                                                                 href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
@@ -206,11 +199,10 @@
                                                     <div class="inner-box">
                                                         <div class="icon-box"><span class="icon icon fa fa-th-large"></span>
                                                         </div>
-                                                        <h4><a href="demo.html">Fresh
-                                                                Elements</a></h4>
-                                                        <div class="text">Ipsum dolor sit amet con tetur adipisicing
-                                                            elit, sed do eiusm tempor incididunt ut lab oret dolore magn
-                                                            aliqua.</div>
+                                                        <h4><a href="demo.html">Productivity</a></h4>
+                                                        <div class="text">By improving the visibility of marketing opportunities, CRM systems have reduced the costs for lead generation, sales,
+                                                        customer service, and marketing. It also reduced the lost opportunity cost and increased the customers handled per sales
+                                                        representative.</div>
                                                         <div class="link-btn"><a
                                                                 href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
@@ -222,11 +214,11 @@
                                                         <div class="icon-box"><span
                                                                 class="icon icon fa fa-beer"></span>
                                                         </div>
-                                                        <h4><a href="demo.html">Unique
-                                                                Design</a></h4>
-                                                        <div class="text">Ipsum dolor sit amet con tetur adipisicing
-                                                            elit, sed do eiusm tempor incididunt ut lab oret dolore magn
-                                                            aliqua.</div>
+                                                        <h4><a href="demo.html">Responsiveness</a></h4>
+                                                        <div class="text">CRM system facilitates the customers by responding immediately to their needs and foster continuous learning and
+                                                        improvement. It increases the number of cross-sales, up-sales, and the number of effective trends by detecting the
+                                                        trends.
+                                                        </div>
                                                         <div class="link-btn"><a
                                                                 href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
@@ -238,13 +230,49 @@
                                                         <div class="icon-box"><span
                                                                 class="icon icon fa fa-phone"></span>
                                                         </div>
-                                                        <h4><a href="demo.html">Premium
-                                                                Support</a></h4>
-                                                        <div class="text">Ipsum dolor sit amet con tetur adipisicing
-                                                            elit, sed do eiusm tempor incididunt ut lab oret dolore magn
-                                                            aliqua.</div>
+                                                        <h4><a href="demo.html">Market segmentation</a></h4>
+                                                        <div class="text">CRM system improves the facilitation of marketing which involves mass production, distribution, and promotion of the
+                                                        product by increasing the campaign response rates while identifying and utilizing the business opportunities.</div>
                                                         <div class="link-btn"><a
                                                                 href="contact.html">Know
+                                                                More <span class="fa fa-arrow-right"></span></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="feature-block-ten col-lg-4 col-md-6 wow fadeInUp">
+                                                    <div class="inner-box">
+                                                        <div class="icon-box"><span class="icon icon fa fa-chart-bar"></span>
+                                                        </div>
+                                                        <h4><a href="demo.html">Account Management</a></h4>
+                                                        <div class="text">CRM system enables the better management of key account customers. It helps in calculating the customer lifetime value
+                                                        and customers' credit risk. It provides insights to increase customer lifetime value and minimize customers' credit
+                                                        risk.</div>
+                                                        <div class="link-btn"><a href="contact.html">Know
+                                                                More <span class="fa fa-arrow-right"></span></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="feature-block-ten col-lg-4 col-md-6 wow fadeInUp">
+                                                    <div class="inner-box">
+                                                        <div class="icon-box"><span class="icon icon fa fa-plus-square"></span>
+                                                        </div>
+                                                        <h4><a href="demo.html">Report and Analysis</a></h4>
+                                                        <div class="text">CRM system produces accurate forecast reports using high quality, integrated analysis of customer data. It helps in
+                                                        monitoring net sales and profit figures along with the Key Performance Indicators (KPIs).<br></div>
+                                                        <div class="link-btn"><a href="contact.html">Know
+                                                                More <span class="fa fa-arrow-right"></span></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="feature-block-ten col-lg-4 col-md-6 wow fadeInUp">
+                                                    <div class="inner-box">
+                                                        <div class="icon-box"><span class="icon icon fa fa-chart-pie"></span>
+                                                        </div>
+                                                        <h4><a href="demo.html">Customer Satisfaction</a></h4>
+                                                        <div class="text">The main objective of any CRM system is to obtain customer satisfaction. It improves the value perception and reduces
+                                                        the number of complaints. It increases the period of customer loyalty, repeat customers, and word of mouth
+                                                        recommendations.</div>
+                                                        <div class="link-btn"><a href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
                                                         </div>
                                                     </div>
