--- a/modules.html
+++ b/modules.html
@@ -54,6 +54,9 @@
                padding-top: 0px !important;
             }
          }
+         .mm p{
+             font-size: 17px !important;
+         }
     </style>
     <style type="text/css" id="kc-css-render"></style>
 </head>
@@ -147,7 +150,7 @@
                                 <section class=" features-section-two ">
                                     <div class="anim-icons"> <span class="icon shape-6"></span>
                                     </div>
-                                    <div class="auto-container">
+                                    <div class="auto-container mm">
                                         <div class="sec-title text-center"> 
                                             <h1>Modules of CRM</h1>
                                             <div class="shape-icon"></div>
@@ -170,17 +173,12 @@
                                             </div>
                                             <div class="col-xl-6">
                                                 <div class="feature-block-two">
-                                                    <h2>The power to unleash</h2>
+                                                    <h2>Sales Automation</h2>
                                                     <div class="text wow fadeInUp" data-wow-delay="400ms">
-                                                        <p>Veniam quis nostrud exercitation ullamco laboris nisi ut
-                                                            aliquip ex ea duis aute irure dolor in reprehenderit in
-                                                            voluptate velit esse cillum dolore eu fugiat nulla pariatur
-                                                            excepteur sint occaecat cupidatat non. Tempor incididunt ut
-                                                            labore et dolore magna aliqua. Ut enim ad minim veniam.
-                                                            <br>
-                                                            <br>Quis nostrud exercitation ullamco laboris nisi ut
-                                                            aliquip ex ea consequat. Duis aute irure dolor in
-                                                            reprehenderit in voluptate velit.</p>
+                                                        <p>This is the most important component of the CRM system which automates sales related tasks such as contact scheduling,
+                                                        sales-customer interaction, promotion activities, and sales campaign, sales trends, and forecasting, reducing sales
+                                                        cycles, etc.
+                                                        </p>
                                                     </div>
                                                     <div class="link-btn wow fadeInUp" data-wow-delay="800ms"><a
                                                             href="contact.html" class="theme-btn btn-style-twelve"><span
@@ -213,17 +211,11 @@
                                             </div>
                                             <div class="col-xl-7">
                                                 <div class="feature-block-three">
-                                                    <h2>Setup advanced reports</h2>
+                                                    <h2>Lead Management</h2>
                                                     <div class="text wow fadeInUp" data-wow-delay="400ms">
-                                                        <p>Veniam quis nostrud exercitation ullamco laboris nisi ut
-                                                            aliquip ex ea duis aute irure dolor in reprehenderit in
-                                                            voluptate velit esse cillum dolore eu fugiat nulla pariatur
-                                                            excepteur sint occaecat cupidatat non. Tempor incididunt ut
-                                                            labore et dolore magna aliqua. Ut enim ad minim veniam.
-                                                            <br>
-                                                            <br>Quis nostrud exercitation ullamco laboris nisi ut
-                                                            aliquip ex ea consequat. Duis aute irure dolor in
-                                                            reprehenderit in voluptate velit.</p>
+                                                        <p>This module keeps track of the sales leads and its distribution. The benefits of this module are directly available to
+                                                        the sales, marketing industries, and call center. Activities like making customized forms, mailing lists, marketing,
+                                                        etc., are involved in lead management.</p>
                                                     </div>
                                                     <div class="link-btn wow fadeInUp" data-wow-delay="800ms"><a
                                                             href="contact.html" class="theme-btn btn-style-twelve"><span
@@ -256,17 +248,10 @@
                                             </div>
                                             <div class="col-xl-6">
                                                 <div class="feature-block-two">
-                                                    <h2>Identify smart activities</h2>
+                                                    <h2>Marketing Automation</h2>
                                                     <div class="text wow fadeInUp" data-wow-delay="400ms">
-                                                        <p>Veniam quis nostrud exercitation ullamco laboris nisi ut
-                                                            aliquip ex ea duis aute irure dolor in reprehenderit in
-                                                            voluptate velit esse cillum dolore eu fugiat nulla pariatur
-                                                            excepteur sint occaecat cupidatat non. Tempor incididunt ut
-                                                            labore et dolore magna aliqua. Ut enim ad minim veniam.
-                                                            <br>
-                                                            <br>Quis nostrud exercitation ullamco laboris nisi ut
-                                                            aliquip ex ea consequat. Duis aute irure dolor in
-                                                            reprehenderit in voluptate velit.</p>
+                                                        <p>Marketing automation is designed to automate marketing related tasks such as planning and analysis, marketing campaign
+                                                        activities, product promotion and scheduling, pricing competition, marketing forecasting, and trends, etc.</p>
                                                     </div>
                                                     <div class="link-btn wow fadeInUp" data-wow-delay="800ms"><a
                                                             href="contact.html" class="theme-btn btn-style-twelve"><span
@@ -281,9 +266,110 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="link-btn text-center"><a href="#"
-                                                class="theme-btn btn-style-five">READ MORE</a>
+                                        
+                                        <div class="row align-items-center">
+                                            <div class="col-xl-5 order-xl-2">
+                                                <div class="image-block-two wow fadeInLeft" data-wow-delay="600ms">
+                                                    <div class="anim-icons"> <span class="icon big-shape-4 paroller" data-paroller-factor="-0.03"
+                                                            data-paroller-factor-lg="-0.03" data-paroller-type="foreground"
+                                                            data-paroller-direction="horizontal"></span>
+                                                    </div>
+                                                    <div class="image">
+                                                        <picture>
+                                                            <img src="images/feature-2.jpg" alt="Image" />
+                                                        </picture>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-7">
+                                                <div class="feature-block-three">
+                                                    <h2>Customer Service and Support</h2>
+                                                    <div class="text wow fadeInUp" data-wow-delay="400ms">
+                                                        <p>This module is designed to manage and document customer information and activities thereby building a long-lasting and
+                                                        strong relationship with new, unmet, existing, and valuable customers. Agumentik has been one such best IT company,
+                                                        which provides exceptional customer service and support using a CRM system.</p>
+                                                    </div>
+                                                    <div class="link-btn wow fadeInUp" data-wow-delay="800ms"><a href="contact.html"
+                                                            class="theme-btn btn-style-twelve"><span class="fa fa-arrow-right"></span></a>
+                                                    </div>
+                                                    <div class="count">
+                                                        <picture>
+                                                            <img src="images/count-2.png" alt="Image" />
+                                                        </picture>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
+                                        <div class="row align-items-center">
+                                            <div class="col-xl-5 offset-xl-1">
+                                                <div class="image-block-one wow fadeInLeft" data-wow-delay="600ms">
+                                                    <div class="anim-icons"> <span class="icon big-shape-3 paroller" data-paroller-factor="-0.03"
+                                                            data-paroller-factor-lg="-0.03" data-paroller-type="foreground"
+                                                            data-paroller-direction="horizontal"></span>
+                                                    </div>
+                                                    <div class="image">
+                                                        <picture>
+                                                            <img src="images/feature-1.jpg" alt="Image" />
+                                                        </picture>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-6">
+                                                <div class="feature-block-two">
+                                                    <h2>Report and Analysis Tools</h2>
+                                                    <div class="text wow fadeInUp" data-wow-delay="400ms">
+                                                        <p>To enable a cross-channel, complete view of sales, customer service, and marketing information which is stored on the
+                                                        company’s database these tools are used, as a set of software and technology for analytical reporting and analysis.</p>
+                                                    </div>
+                                                    <div class="link-btn wow fadeInUp" data-wow-delay="800ms"><a href="contact.html"
+                                                            class="theme-btn btn-style-twelve"><span class="fa fa-arrow-right"></span></a>
+                                                    </div>
+                                                    <div class="count">
+                                                        <picture>
+                                                            <img src="images/count-3.png" alt="Image" />
+                                                        </picture>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row align-items-center">
+                                            <div class="col-xl-5 order-xl-2">
+                                                <div class="image-block-two wow fadeInLeft" data-wow-delay="600ms">
+                                                    <div class="anim-icons"> <span class="icon big-shape-4 paroller" data-paroller-factor="-0.03"
+                                                            data-paroller-factor-lg="-0.03" data-paroller-type="foreground"
+                                                            data-paroller-direction="horizontal"></span>
+                                                    </div>
+                                                    <div class="image">
+                                                        <picture>
+                                                            <img src="images/feature-2.jpg" alt="Image" />
+                                                        </picture>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-7">
+                                                <div class="feature-block-three">
+                                                    <h2>Customer Service and Support</h2>
+                                                    <div class="text wow fadeInUp" data-wow-delay="400ms">
+                                                        <p>This module is designed to manage and document customer information and activities thereby building a
+                                                            long-lasting and
+                                                            strong relationship with new, unmet, existing, and valuable customers. Agumentik has been one such
+                                                            best IT company,
+                                                            which provides exceptional customer service and support using a CRM system.</p>
+                                                    </div>
+                                                    <div class="link-btn wow fadeInUp" data-wow-delay="800ms"><a href="contact.html"
+                                                            class="theme-btn btn-style-twelve"><span class="fa fa-arrow-right"></span></a>
+                                                    </div>
+                                                    <div class="count">
+                                                        <picture>
+                                                            <img src="images/count-2.png" alt="Image" />
+                                                        </picture>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- <div class="link-btn text-center"><a href="#"
+                                                class="theme-btn btn-style-five">READ MORE</a>
+                                        </div> -->
                                     </div>
                                 </section>
                             </div>
